--- a/src/main/resources/public/src/scss/formRefactoring/_layout.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_layout.scss
@@ -51,43 +51,6 @@
     right: $layout-properties-panel-width;
     background-color: $layout-main-bg-color;
     @include scrollbarHidden;
-
-    .drawing-board {
-      display: table;
-      width: $drawing-board-width;
-      max-width: $drawing-board-width;
-      min-height: 100%;
-      margin: $drawing-board-margin;
-      padding: $drawing-board-padding;
-      background-color: $drawing-board-bg-color;
-      border: $drawing-board-border;
-      box-shadow: $drawing-board-box-shadow;
-
-      & *:focus {
-        outline: none !important;
-      }
-
-      &[data-readonly=true] {
-        // 폼 양식 화면에서 컴포넌트 수정을 막음
-        .component {
-          .dropzone,
-          .ql-toolbar,
-          textarea,
-          button,
-          input[type=text],
-          label.radio,
-          label.checkbox,
-          select,
-          .select {
-            pointer-events: none;
-          }
-
-          .move-handler {
-            display: inherit;
-          }
-        }
-      }
-    }
   }
   &-properties-panel-header {
     position:fixed;
@@ -202,5 +165,39 @@
         @include scrollbarHidden;
       }
     }
+  }
+}
+
+// drawing board
+.drawing-board {
+  .form {
+    display: inline-block;
+    min-height: $form-min-height;
+    background-color: $form-bg-color;
+    border: $form-border;
+    box-shadow: $form-box-shadow;
+
+    & *:focus { outline: none !important; }
+
+    /*&[data-readonly=true] {
+      // 폼 양식 화면에서 컴포넌트 수정을 막음
+      .component {
+        .dropzone,
+        .ql-toolbar,
+        textarea,
+        button,
+        input[type=text],
+        label.radio,
+        label.checkbox,
+        select,
+        .select {
+          pointer-events: none;
+        }
+
+        .move-handler {
+          display: inherit;
+        }
+      }
+    }*/
   }
 }
