--- a/src/main/resources/public/assets/css/form2.css
+++ b/src/main/resources/public/assets/css/form2.css
@@ -653,7 +653,7 @@ input, button, select, optgroup, textarea {
   font-weight: 500;
   cursor: pointer;
 }
-.component-accordion-box .component-accordion .accordion-label .arrow-right {
+.component-accordion-box .component-accordion .accordion-label .arrow-left {
   width: 0.75rem;
   height: 1.25rem;
   -webkit-mask-image: url("../media/icons/icon_arrow_left.svg");
@@ -920,7 +920,7 @@ input, button, select, optgroup, textarea {
   display: block;
   color: #ACB4BF;
 }
-.component-accordion-box .component-accordion input[type=radio]:checked + .accordion-label .arrow-right {
+.component-accordion-box .component-accordion input[type=radio]:checked + .accordion-label .arrow-left {
   transform: rotate(-90deg);
 }
 .component-accordion-box .component-accordion input[type=radio]:checked ~ .accordion-content {
@@ -966,6 +966,60 @@ input, button, select, optgroup, textarea {
 }
 .drawing-board .form *:focus {
   outline: none !important;
+}
+.drawing-board .form .group .group-labelBox {
+  display: table;
+  width: 100%;
+  min-height: 2.5rem;
+  padding: 0 0.625rem 0 0.625rem;
+}
+.drawing-board .form .group .group-labelBox .group-label {
+  display: table-cell;
+  vertical-align: middle;
+}
+.drawing-board .form .group .group-labelBox .arrow-left {
+  opacity: 0;
+}
+.drawing-board .form .group.group-accordion {
+  border-bottom: 0.0625rem solid #EBEBEB;
+}
+.drawing-board .form .group.group-accordion .group-accordion-checkBox {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+.drawing-board .form .group.group-accordion .group-accordion-checkBox:checked + .group-accordion-labelBox {
+  border-bottom-color: #EBEBEB;
+}
+.drawing-board .form .group.group-accordion .group-accordion-checkBox:checked + .group-accordion-labelBox .arrow-left {
+  transform: rotate(-90deg);
+}
+.drawing-board .form .group.group-accordion .group-accordion-checkBox:checked ~ .row {
+  display: block;
+}
+.drawing-board .form .group.group-accordion .group-accordion-labelBox {
+  border: 0.0625rem solid #EBEBEB;
+  background-color: #F7F8F9;
+  padding: 0 1.125rem 0 0.625rem;
+  cursor: pointer;
+  border-bottom-color: transparent;
+}
+.drawing-board .form .group.group-accordion .group-accordion-labelBox .arrow-left {
+  opacity: 1;
+  display: table-cell;
+  width: 0.75rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/icon_arrow_left.svg");
+  mask-image: url("../media/icons/icon_arrow_left.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
+}
+.drawing-board .form .group.group-accordion .row {
+  display: none;
+  transition: all 0.25s ease-out;
 }
 
 /* _elements.scss 
