--- a/src/main/resources/public/src/scss/formRefactoring/_variables.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_variables.scss
@@ -38,8 +38,9 @@ $component-icon-width:                             7.75rem; // 124px
 $component-icon-height:                            7.188rem; // 115px
 $component-icon-hover-bg-color:                    rgba(235, 235, 235, 0.3);
 
-// icon
+////////////////////////////////////// icon//////////////////////////////////////////////
 $icon-arrow-left:                                  $icon-folder-path + "icon_arrow_left.svg";
+
 $icon-component-inputBox:                          $icon-folder-path + "form/context-menu/icon-inputbox.svg";
 $icon-component-textArea:                          $icon-folder-path + "form/context-menu/icon-textbox.svg";
 $icon-component-textEditor:                        $icon-folder-path + "form/context-menu/icon-textbox.svg";
@@ -58,6 +59,8 @@ $icon-component-label:                             $icon-folder-path + "form/con
 $icon-component-image:                             $icon-folder-path + "form/context-menu/icon-image.svg";
 $icon-component-divider:                           $icon-folder-path + "form/context-menu/icon-divider.svg";
 
+///////////////////////////// common /////////////////////////
+$column-row:                                       12;  // 폼을 나누는 갯수
 
 //////////////////////////// form ////////////////////////////
 $form-min-height:                                  56.25rem; // 900px
@@ -65,7 +68,10 @@ $form-bg-color:                                    $white;
 $form-border:                                      0.0625rem solid $line-gray; // 1px
 $form-box-shadow:                                  0 0 0.9375rem 0 rgba(204, 206, 209, 0.3); // 흐림 15px,  $pressed-gray, 불투명도 30%;
 
-$column-row:                                       12;  // 폼을 나누는 갯수
+//////////////////////////// group ///////////////////////////
+$group-accordion-bg-color:                         $light-gray;
+$group-accordion-border-color:                     $line-gray;
+$group-accordion-border:                           0.0625rem solid $group-accordion-border-color; // 1px
 
 ////////////////////////// elements /////////////////////////
 // table
