--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -9,12 +9,12 @@
     <table class="list-table">
         <thead class="list-head">
             <tr class="flex-row align-items-center">
-                <th style="width:5%;" class="align-left" th:text="#{download.label.seq}"></th>
-                <th style="width:10%;" class="align-left" th:text="#{download.label.category}"></th>
+                <th style="width:5%;" class="align-center" th:text="#{download.label.seq}"></th>
+                <th style="width:10%;" class="align-center" th:text="#{download.label.category}"></th>
                 <th style="width:45%;" class="align-left" th:text="#{common.label.title}"></th>
-                <th style="width:10%;" class="align-left" th:text="#{common.label.writer}"></th>
-                <th style="width:20%;" class="align-left" th:text="#{common.label.writeDate}"></th>
-                <th style="width:10%;" class="align-left" th:text="#{download.label.views}"></th>
+                <th style="width:10%;" class="align-center" th:text="#{download.label.views}"></th>
+                <th style="width:10%;" class="align-center" th:text="#{common.label.writer}"></th>
+                <th style="width:20%;" class="align-center" th:text="#{common.label.writeDate}"></th>
             </tr>
         </thead>
         <tbody class="list-body">
@@ -23,8 +23,8 @@
             </tr>
             <th:block th:fragment="list">
                 <tr class="flex-row align-items-center" th:each="download : ${downloadList}">
-                    <td style="width:5%;" class="align-left" th:text="|${download.downloadSeq}|"></td>
-                    <td style="width:10%;" class="align-left" th:text="#{${download.downloadCategory}}"></td>
+                    <td style="width:5%;" class="align-center" th:text="|${download.downloadSeq}|"></td>
+                    <td style="width:10%;" class="align-center" th:text="#{${download.downloadCategory}}"></td>
                     <td style="width:45%;" class="align-left underline">
                         <a sec:authorize="!hasAuthority('download.update')" th:text="${download.downloadTitle}"
                            th:href="@{/downloads/{id}/view(id=${download.downloadId})}">
@@ -32,9 +32,9 @@
                         <a sec:authorize="hasAuthority('download.update')" th:text="${download.downloadTitle}"
                            th:href="@{/downloads/{id}/edit(id=${download.downloadId})}"></a>
                     </td>
-                    <td style="width:10%;" class="align-left" th:text="${download.createUserName}"></td>
-                    <td style="width:20%;" class="align-left date-time" name="createDt" th:text="${download.createDt}"></td>
-                    <td style="width:10%;" class="align-left" th:text="${download.views}"></td>
+                    <td style="width:10%;" class="align-center" th:text="${download.views}"></td>
+                    <td style="width:10%;" class="align-center" th:text="${download.createUserName}"></td>
+                    <td style="width:20%;" class="align-center date-time" name="createDt" th:text="${download.createDt}"></td>
                 </tr>
             </th:block>
         </tbody>
