#10366 사용자 역할명이 길경우 화면깨짐현상 발생 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1162,6 +1162,7 @@ table[id=documentDisplay] td {
   height: 1.5rem;
   font-weight: 400;
   color: #586872;
+  overflow: hidden;
 }
 
 .tag-group {
