#10366 사용자 역할명이 길경우 화면깨짐현상 발생 수정(박현철 차장님 피드백 적용)

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1163,6 +1163,8 @@ table[id=documentDisplay] td {
   font-weight: 400;
   color: #586872;
   overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .tag-group {
