--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -111,6 +111,8 @@ table[id="documentDisplay"] {
       font-weight: $font-weight-regular;
       color: $dark-gray;
       overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
