--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -109,9 +109,21 @@
         const STATUS_ERROR_CODE_DUPLICATION = '2';
         const STATUS_ERROR_CODE_P_CODE_NOT_EXIST = '3';
         const STATUS_ERROR_CODE_P_CODE_USED = '4';
+        let CODE_DELETE = false;
+        let CODE_CREATE = false;
+        let CODE_UPDATE = false;
         const sessionKey = 'code_expand_key';
 
         window.addEventListener('load', function() {
+            if (document.getElementById('btnUpdate') !== null) {
+                CODE_UPDATE = true;
+            }
+            if (document.getElementById('btnRegist') !== null) {
+                CODE_CREATE = true;
+            }
+            if (document.getElementById('btnDelete') !== null) {
+                CODE_DELETE = true;
+            }
             document.getElementById('search').focus();
             onCreate();
 
@@ -154,14 +166,27 @@
                         document.getElementById('txtCreateDt').value = i18n.userDateTime(responseJson.createDt);
                         document.getElementById('txtUpdateUserName').value = responseJson.updateUserName;
                         document.getElementById('txtUpdateDt').value = i18n.userDateTime(responseJson.updateDt);
-                        if (responseJson.editable) {
-                            document.querySelector('#btnUpdate').removeAttribute('disabled');
-                            document.querySelector('#btnDelete').removeAttribute('disabled');
-                        } else {
-                            document.getElementById('btnUpdate').disabled = true;
-                            document.getElementById('btnDelete').disabled = true;
+                        if (CODE_CREATE) {
+                            document.querySelector('#btnRegist').style.display = 'none';
                         }
-                        document.querySelector('#btnRegist').setAttribute('disabled', 'true');
+                        if (responseJson.editable) {
+                            if (CODE_UPDATE) {
+                                document.querySelector('#btnUpdate').removeAttribute('disabled');
+                            }
+                            if (CODE_DELETE) {
+                                document.querySelector('#btnDelete').removeAttribute('disabled');
+                            }
+                        } else {
+                            if (CODE_UPDATE) {
+                                document.getElementById('btnUpdate').disabled = true;
+                            }
+                            if (CODE_DELETE) {
+                                document.getElementById('btnDelete').disabled = true;
+                            }
+                        }
+                        if (CODE_CREATE) {
+                            document.querySelector('#btnRegist').setAttribute('disabled', 'true');
+                        }
                         onEdit();
                     }
                 };
@@ -189,12 +214,18 @@
 
         /** create **/
         function onCreate() {
-            document.querySelector('#btnUpdate').style.display = 'none';
-            document.querySelector('#btnUpdate').setAttribute('disabled', 'true');
-            document.querySelector('#btnDelete').style.display = 'none';
-            document.querySelector('#btnDelete').setAttribute('disabled', 'true');
-            document.querySelector('#btnRegist').removeAttribute('disabled');
-            document.querySelector('#btnRegist').style.display = 'block';
+            if (CODE_UPDATE) {
+                document.querySelector('#btnUpdate').style.display = 'none';
+                document.querySelector('#btnUpdate').setAttribute('disabled', 'true');
+            }
+            if (CODE_DELETE) {
+                document.querySelector('#btnDelete').style.display = 'none';
+                document.querySelector('#btnDelete').setAttribute('disabled', 'true');
+            }
+            if (CODE_CREATE) {
+                document.querySelector('#btnRegist').removeAttribute('disabled');
+                document.querySelector('#btnRegist').style.display = 'block';
+            }
             document.querySelectorAll('input[type=text]').forEach(function(object){
                 object.value = '';
             });
@@ -209,10 +240,17 @@
         }
 
         function onEdit() {
-            document.querySelector('#btnUpdate').style.display = 'block';
-            document.querySelector('#btnDelete').style.display = 'block';
-            document.querySelector('#btnRegist').style.display = 'none';
+            if (CODE_UPDATE) {
+                document.querySelector('#btnUpdate').style.display = 'block';
+            }
+            if (CODE_DELETE) {
+                document.querySelector('#btnDelete').style.display = 'block';
+            }
+            if (CODE_DELETE) {
+                document.querySelector('#btnRegist').style.display = 'none';
+            }
         }
+
 
         /** save **/
         function onSave(method) {
